--- a/www/index.html
+++ b/www/index.html
@@ -757,7 +757,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Context Width</a>
                             <br>
@@ -778,6 +778,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>NEXT_LOWEST_POWER_OF_TWO</a>
@@ -794,6 +795,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>NEXT_HIGHEST_POWER_OF_TWO</a>
@@ -810,6 +812,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>EXACT</a>
@@ -825,6 +828,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <textarea id="algorithm_javascript" rows="8"
@@ -834,9 +838,7 @@
                         <br>
                     </div>
                     <br>
-
-
-                    <div class="row">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Context Height</a>
                             <br>
@@ -857,6 +859,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>NEXT_LOWEST_POWER_OF_TWO</a>
@@ -873,6 +876,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>NEXT_HIGHEST_POWER_OF_TWO</a>
@@ -889,6 +893,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>EXACT</a>
@@ -904,6 +909,7 @@
                         <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                         </div>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <textarea id="algorithm_javascript" rows="8"
