--- a/www/index.html
+++ b/www/index.html
@@ -743,7 +743,7 @@
                 </h1>
                 <h1 class="editable"
                     style="padding-top: 18px; padding-bottom: 18px;text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <div class="row" style="border-bottom: 1px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
                             <a>Context Identifier</a>
                             <br>
@@ -757,12 +757,14 @@
 
                         </div>
                     </div>
-                    <br>
-                    <div class="row" style="border-bottom: 1px solid #fff;">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <br>
                             <a>Context Width</a>
                             <br>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>SCREEN_SIZE</a>
                         </div>
@@ -837,11 +839,14 @@
                         <br>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 1px solid #fff;">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <br>
                             <a>Context Height</a>
                             <br>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
                             <a>SCREEN_SIZE</a>
                         </div>
