--- a/www/index.html
+++ b/www/index.html
@@ -694,8 +694,9 @@
                             <br>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <br>
                             <button type="button" class="btn btn-outline-success mx-auto">Add Image</button>
                             <br>
                         </div>
@@ -709,8 +710,9 @@
                             <br>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <br>
                             <button type="button" class="btn btn-outline-success mx-auto">Add Sound</button>
                             <br>
                         </div>
@@ -724,8 +726,9 @@
                             <br>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <br>
                             <button type="button" class="btn btn-outline-success mx-auto">Add Video</button>
                             <br>
                         </div>
