--- a/www/index.html
+++ b/www/index.html
@@ -479,13 +479,20 @@
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 
                 <h1 class="read_only"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>Algorithm Information</a>
-                            <br>
-                        </div>
-                    </div>
+                </h1>
+                <h1 class="editable"
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                            <a>General Settings</a>
+                </h1>
+                <h1 class="editable"
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                            <a>Media Files</a>
+                </h1>
+                <h1 class="editable"
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                            <a>WebGL Context(s)</a>
                 </h1>
                 <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
                     style="text-align:center; padding-top: 18px; padding-bottom: 18px; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -571,15 +578,6 @@
                     </div>
                 </h1>
 
-                <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>General Settings</a>
-                            <br>
-                        </div>
-                    </div>
-                </h1>
                 <h1 class="editable"
                     style=" padding-top: 18px; padding-bottom: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
 
@@ -678,15 +676,6 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>Media Files</a>
-                            <br>
-                        </div>
-                    </div>
-                </h1>
-                <h1 class="editable"
                     style="padding-top: 18px; padding-bottom: 18px;text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
@@ -735,15 +724,6 @@
                     </div>
                 </h1>
                 
-                <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:max-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>WebGL Context(s)</a>
-                            <br>
-                        </div>
-                    </div>
-                </h1>
                 <h1 class="editable"
                     style="padding-top: 18px; padding-bottom: 18px;text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
