--- a/www/index.html
+++ b/www/index.html
@@ -479,19 +479,19 @@
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 
                 <h1 class="read_only"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>Algorithm Information</a>
                 </h1>
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>General Settings</a>
                 </h1>
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>Media Files</a>
                 </h1>
                 <h1 class="editable"
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>WebGL Context(s)</a>
                 </h1>
                 <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
