--- a/www/index.html
+++ b/www/index.html
@@ -476,7 +476,7 @@
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
-            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+            <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align: center;">
                 
                 <h1 class="read_only"
                     style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
