--- a/www/index.html
+++ b/www/index.html
@@ -948,196 +948,17 @@
                     style="padding-top: 18px; padding-bottom: 18px;text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
-                            <a>Context Identifier</a>
+                            <a>Program Identifier</a>
                             <br>
                             <br>
                         </div>
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                            <input style="text-align:center; color:#fff;" placeholder="Context name..."
-                                value="{{algorithm.contexts[0].name}}"></input>
+                            <input style="text-align:center; color:#fff;" placeholder="Program name..."
+                                value="{{algorithm.programs[0].name}}"></input>
                             <br>
                             <br>
 
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>Depth Component</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="depth_checkbox" type="checkbox" value="">
-                                <label for="depth_checkbox"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row" style="border-top: 1px solid #fff;">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <br>
-                            <a>Context Width</a>
-                            <br>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>SCREEN_SIZE</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="width_screen_size" type="checkbox" value="">
-                                <label for="width_screen_size"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>NEXT_LOWEST_POWER_OF_TWO</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="width_next_lowest_power_of_two" type="checkbox"
-                                    value="">
-                                <label for="width_next_lowest_power_of_two"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>NEXT_HIGHEST_POWER_OF_TWO</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="width_next_highest_power_of_two" type="checkbox"
-                                    value="">
-                                <label for="width_next_highest_power_of_two"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>EXACT</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="width_exact" type="checkbox" value="">
-                                <label for="width_exact"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <textarea id="algorithm_javascript" rows="8"
-                                style="text-align:left; border: 1px solid #0F0;" placeholder="Enter JavaScript here..."
-                                value="{{algorithm.client}}"></textarea>
-                        </div>
-                        <br>
-                    </div>
-                    <br>
-                    <div class="row" style="border-top: 1px solid #fff;">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <br>
-                            <a>Context Height</a>
-                            <br>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>SCREEN_SIZE</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="height_screen_size" type="checkbox" value="">
-                                <label for="height_screen_size"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>NEXT_LOWEST_POWER_OF_TWO</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="height_next_lowest_power_of_two" type="checkbox"
-                                    value="">
-                                <label for="height_next_lowest_power_of_two"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>NEXT_HIGHEST_POWER_OF_TWO</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="height_next_highest_power_of_two" type="checkbox"
-                                    value="">
-                                <label for="height_next_highest_power_of_two"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
-                            <a>EXACT</a>
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                        </div>
-                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
-                            <div class="checkbox">
-                                <input style="float:right;" id="height_exact" type="checkbox" value="">
-                                <label for="height_exact"></label>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <textarea id="algorithm_javascript" rows="8"
-                                style="text-align:left; border: 1px solid #0F0;" placeholder="Enter JavaScript here..."
-                                value="{{algorithm.client}}"></textarea>
-                        </div>
-                        <br>
                     </div>
                     <br>
 
