--- a/www/index.html
+++ b/www/index.html
@@ -1548,9 +1548,9 @@
                     }
 
                     for (var i = 0; i < image_data.data.length; i += 4) {
-                        image_data.data[i] = (image_data.data[i] - real_min) / (real_max - real_min);
-                        image_data.data[i + 1] = (image_data.data[i + 1] - real_min) / (real_max - real_min);
-                        image_data.data[i + 2] = (image_data.data[i + 2] - real_min) / (real_max - real_min);
+                        image_data.data[i] = (image_data.data[i] - real_min) / (real_max - real_min)/256.;
+                        image_data.data[i + 1] = (image_data.data[i + 1] - real_min) / (real_max - real_min)/256.;
+                        image_data.data[i + 2] = (image_data.data[i + 2] - real_min) / (real_max - real_min)/256.;
                     }
 
                     ctx.putImageData(image_data, 0, 0);
