--- a/www/index.html
+++ b/www/index.html
@@ -962,6 +962,29 @@
                     </div>
                     <br>
 
+                    <h1 style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                        
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                                <br>
+                                <a>Uniform Variables</a>
+                                <br>
+                            </div>
+                        </div>
+                        <div class="row" style="border-bottom: 2px solid #fff;">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                                <button type="button" class="btn btn-outline-danger mx-auto">Delete Variable</button>
+                                <br>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                                <button type="button" class="btn btn-outline-success mx-auto">Add Uniform Variable</button>
+                                <br>
+                            </div>
+                        </div>
+                    </h1>
                     <div class="row" style="border-bottom: 2px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-danger mx-auto">Delete Program</button>
