--- a/www/index.html
+++ b/www/index.html
@@ -962,7 +962,7 @@
                     </div>
                     <br>
 
-                    <div style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    <div style="margin:14px; padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                         
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
