--- a/www/index.html
+++ b/www/index.html
@@ -399,13 +399,13 @@
         <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.CREATE); ">Create</button>
         <button id="menu_profile_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
-            class="logged_in_content btn btn-outline-primary mx-auto"
+            class="logged_in_content btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.PROFILE);;">Profile</button>
         <button id="menu_login_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
             class="logged_out_content btn btn-outline-success mx-auto"
             onclick="state.show_page(pages.LOGIN);">Login</button>
         <button id="menu_signup_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
-            class="logged_out_content btn btn-outline-primary mx-auto" onclick="state.show_page(pages.SIGNUP);">Sign
+            class="logged_out_content btn btn-outline-success mx-auto" onclick="state.show_page(pages.SIGNUP);">Sign
             Up</button>
         <button id="menu_logout_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
             class="logged_in_content btn btn-outline-danger mx-auto" onclick="state.show_page(pages.LOGOUT);">Log
@@ -433,7 +433,7 @@
                     <div style="text-align: center;">
                         <button type="button" class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.LOGIN);">Login</button>
-                        <button type="button" class="btn btn-outline-primary mx-auto"
+                        <button type="button" class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.SIGNUP);">Sign
                             Up</button>
                         <button type="button" class="btn btn-outline-primary mx-auto"
@@ -460,7 +460,7 @@
                         <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
                             class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.CREATE); ">Create</button>
-                        <button type="button" class="btn btn-outline-primary mx-auto"
+                        <button type="button" class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.PROFILE);">Profile</button>
                         <button type="button" class="btn btn-outline-danger mx-auto"
                             onclick="state.show_page(pages.LOGOUT);">Log
@@ -1156,7 +1156,7 @@
                     Not a member? Simply use the "Sign Up" section to register!
                     <br>
                     <br>
-                    <button type="button" class="btn btn-outline-primary mx-auto"
+                    <button type="button" class="btn btn-outline-success mx-auto"
                         onclick="state.show_page(pages.SIGNUP);">Sign
                         Up</button>
                     <br>
