--- a/www/index.html
+++ b/www/index.html
@@ -479,7 +479,7 @@
             <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align: center;">
                 
                 <h1 class="read_only"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>Algorithm Information</a>
                 </h1>
                 <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
@@ -567,7 +567,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>General Settings</a>
                 </h1>
                 <h1 class="editable"
@@ -668,7 +668,7 @@
                 </h1>
 
                 <h1 class="editable"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>Media Files</a>
                 </h1>
                 <h1 class="editable"
@@ -721,7 +721,7 @@
                 </h1>
                 
                 <h1 class="editable"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>WebGL Contexts</a>
                 </h1>
                 <h1 class="editable"
@@ -941,7 +941,7 @@
                     </div>
                 </h1>
                 <h1 class="editable"
-                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:min-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                             <a>WebGL Programs</a>
                 </h1>
                 <h1 class="editable"
