--- a/www/index.html
+++ b/www/index.html
@@ -351,7 +351,7 @@
                 <br>
                 <br>
                 <div style="text-align: center;">
-                    <button type="button" class="opt_out btn btn-outline-danger mx-auto"
+                    <button type="button" class="btn btn-outline-danger mx-auto"
                         onclick="state.back();">OK</button>
                 </div>
             </h1>
@@ -377,7 +377,7 @@
                 <br>
                 <br>
                 <div style="text-align: center;">
-                    <button type="button" class="opt_out    btn btn-outline-danger mx-auto"
+                    <button type="button" class="btn btn-outline-danger mx-auto"
                         onclick="state.back();">OK</button>
                 </div>
             </h1>
