--- a/www/index.html
+++ b/www/index.html
@@ -969,6 +969,295 @@
                         </div>
                     </div>
                     <div style="margin:14px; padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                        
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <br>
+                            <a>Uniform Type</a>
+                            <br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>float</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_float" type="checkbox" value="">
+                                <label for="uniform_type_float"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>int</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_int" type="checkbox"
+                                    value="">
+                                <label for="uniform_type_int"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>bool</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_bool" type="checkbox" value="">
+                                <label for="uniform_type_bool"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>vec2</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_vec2" type="checkbox" value="">
+                                <label for="uniform_type_vec2"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>vec3</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_vec3" type="checkbox" value="">
+                                <label for="uniform_type_vec3"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>vec4</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_vec4" type="checkbox" value="">
+                                <label for="uniform_type_vec4"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>ivec2</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_ivec2" type="checkbox" value="">
+                                <label for="uniform_type_ivec2"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>ivec3</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_ivec3" type="checkbox" value="">
+                                <label for="uniform_type_ivec3"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>ivec4</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_ivec4" type="checkbox" value="">
+                                <label for="uniform_type_ivec4"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>bvec2</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_bvec2" type="checkbox" value="">
+                                <label for="uniform_type_bvec2"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>bvec3</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_bvec3" type="checkbox" value="">
+                                <label for="uniform_type_bvec3"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>bvec4</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_bvec4" type="checkbox" value="">
+                                <label for="uniform_type_bvec4"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>mat2</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_mat2" type="checkbox" value="">
+                                <label for="uniform_type_mat2"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>mat3</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_mat3" type="checkbox" value="">
+                                <label for="uniform_type_mat3"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>mat4</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_mat4" type="checkbox" value="">
+                                <label for="uniform_type_mat4"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>sampler2d</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_sampler2d" type="checkbox" value="">
+                                <label for="uniform_type_sampler2d"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>samplercube</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="uniform_type_samplercube" type="checkbox" value="">
+                                <label for="uniform_type_samplercube"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <textarea id="algorithm_javascript" rows="8"
+                                style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."
+                                value="{{algorithm.client}}"></textarea>
+                        </div>
+                        <br>
+                    </div>
+                    <br>
                         <div class="row" style="border-bottom: 2px solid #fff;">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                                 <button type="button" class="btn btn-outline-danger mx-auto">Delete Variable</button>
